docs(tracing): update Tracing API documentation to v2.7.x
- Update all 14 Tracing API documents with correct OpenTelemetry examples
- Fix deprecated API calls: span.addTag() → span.setAttribute()
- Fix context access: TracingContext.current() → TracingContextHolder.getCurrentContext()
- Remove non-existent annotations: @TraceAsync, @TraceSpan
- Update sampling config: strategy "ratio" → "parent_based_traceid_ratio"
- Update default sampling rate: 1.0 → 0.1
- Fix broken links: configuration.md → config-reference.md
- Update development guide index pages to version 1.8.0
- Update docs-versions.json with latest timestamps